<resources>
    <string name="app_name">TestLibraries</string>
    <string name="login_button">Login</string>
    <string name="login_username">Username</string>
    <string name="registration_password">Password</string>
    <string name="err_msg_name">Wrong username</string>
    <string name="err_msg_password">Wrong password</string>
    <string name="title_activity_login_generated">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="login_registration">Registration</string>
    <string name="registration_email">E-mail</string>
    <string name="registration_email_again">E-mail again</string>
    <string name="registration_password_again">Password again</string>
    <string name="registartion_over_18">Over 18</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_location">Location</string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nisl quam, tincidunt et eros sed, aliquam condimentum felis. Cras leo neque, vulputate eget nulla sit amet, faucibus vulputate turpis. Donec vestibulum odio nisl, et aliquam ex consectetur vestibulum. Quisque non leo scelerisque, ultrices lacus sit amet, cursus nulla. Praesent pellentesque velit arcu, at sodales augue porttitor vel. Cras vel risus nisi. Sed a velit vel velit imperdiet egestas quis vel diam. Aenean vitae diam nec dui laoreet lobortis. Pellentesque gravida felis risus. Nunc mi mauris, ultricies eget accumsan id, euismod non sem.</string>
</resources>
